--- a/crud.html
+++ b/crud.html
@@ -45,11 +45,12 @@
                 <label class="label"for="rangeMiedo"><img src="./icons/miedo.png" alt="alias">Miedo:</label>
                 <input type="range" name="rangeMiedo">
                 <label for="selectTipo"><img src="./icons/tipo.png" alt="alias">Tipo:</label>
-                <select name="selectTipo" id="selectTipo"></select>
+                <select required name="selectTipo" id="selectTipo"></select>
                 <input type="hidden" name="txtId">
                 <input type="image" src="./icons/guardar.png" value="Guardar" >
                 <input type="button" class="ocultar" value="Eliminar" id="eliminar"></input>
-                <input type="button" class="ocultar" value="Cancelar" id="cancelar"></button>                
+                <input type="button" class="ocultar" value="Cancelar" id="cancelar"></button>  
+                <div id="mensaje"></div>      
             </form>
         </section>  
        <section class = "seccion-tabla">
